--- a/index.html
+++ b/index.html
@@ -10,46 +10,22 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.1/animate.min.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
   </head>
-  <body ng-app="2k48App" ng-controller="MainCtrl" ng-keydown="key($event)">
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-
-    <div id="highscore">
-        <span class="score center light-blue darken-4 white-text padding">Tableau des records</span>
-        <span ng-repeat="scores in highscores | orderBy:score"  class="score center padding border-bottom light-blue-text">{{scores.username}} : {{scores.score}}</span>
-    </div>
+  <body ng-app="lafay" ng-controller="MainCtrl" ng-keydown="key($event)">
+   
 
     <div  class="container">
-
-        <form ng-submit="fixeUsername()">
-            <div class="row">
-              <div class="input-field col s12">
-                <input  ng-model="user.tmp" id="username" type="text" class="validate">
-                <label for="username">Username</label>
-              </div>
-            </div>
-        </form>
-
-        <h1 class="header center orange-text">Bienvenue au jeux 2048</h1>
-        <h2 class="center light-blue-text">Votre score : {{user.score}}</h2>
-
-        <button class="centered"  ng-click="newGame()">Nouvelle partie</button>
-        <div  id="mainContainer">
-            <div ng-repeat="tile in board"  class='case N{{tile.value}}' id='case-{{$index}}'>{{tile.value}}</div>
-        </div>
-
+        <select ng-model="currentLevel" ng-change="changeLevel(currentLevel)" ng-options="currentLevel as level.value for level in  listLevels" >
+        </select> 
+        <p>votre niveau :  {{currentLevel}}</p>
+        <p>Encore {{nbSeries}} séries !</p>
+        <div id="rond-timer" ng-click="startTimer()">{{time}}</div>
     </div>
 
 
     <script src="scripts/angular/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
 </body>
